err/python-foneworx.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/foneworx'...
Compiling './lib/python3.5/site-packages/foneworx/client.py'...
***   File "./lib/python3.5/site-packages/foneworx/client.py", line 193
    except ApiException, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/foneworx/protocol.py'...
***   File "./lib/python3.5/site-packages/foneworx/protocol.py", line 24
    raise FoneworxException, "onXMLReceived not initialized for receiving"
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/foneworx/utils.py'...
***   File "./lib/python3.5/site-packages/foneworx/utils.py", line 15
    raise Exception, 'No dispatcher available for %s' % command
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_foneworx-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/connection_tests.py'...
***   File "./lib/python3.5/site-packages/tests/connection_tests.py", line 73
    print """Please send a test SMS to Foneworx in order to fill""" \
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
